fix layout problems

--- a/src/components/KymaModules/components/CommunityModule.scss
+++ b/src/components/KymaModules/components/CommunityModule.scss
@@ -1,16 +1,24 @@
+.edit {
+  display: grid;
+  grid-template-columns: 3fr 3fr;
+  gap: 0.5rem 1rem;
+}
+
 .community-modules {
-  .edit {
-    display: grid;
-    gridtemplatecolumns: 3fr 3fr;
-    //gap: 0.5rem 1rem;
-  }
   .collapsible-margins {
     padding: 0;
     padding-left: 0;
     padding-right: 0;
     margin-left: -1rem;
     margin-right: -1rem;
+    min-height: calc(50vh - 17rem);
   }
-  padding: 0 1rem;
-  min-height: calc(50vh - 17rem);
+
+  .channel-select {
+    width: 100%;
+  }
+}
+
+.test {
+  grid-template-columns: none;
 }
